<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninFragment"
    android:background="#ffffff">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:background="#2B3Aff"
        android:textColor="#ffffff"
        android:textColorHint="#c4c4c4"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:background="#2B3Aff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="#ffffff"
        android:textColorHint="#c4c4c4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextCpf" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="48dp"
        android:background="#2B3Aff"
        android:text="@string/signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextCpf"
        android:layout_width="206dp"
        android:layout_height="37dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:background="#2B3Aff"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#ffffff"
        android:textColorHint="#c4c4c4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/buttonSwitchToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="128dp"
        android:background="#00000000"
        android:text="@string/j_tenho_uma_conta"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="78dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="192dp"
        android:text="@string/signin"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>